<resources>
    <string name="app_name">MidiToMp3Converter</string>
    <string name="select_file">Find MIDI file</string>
    <string name="select_format">Select an output format:</string>
    <string name="select_destination">Select a destination:</string>
    <string name="converted">Files already converted:</string>
    <string name="mp3">MP3</string>
    <string name="wav">WAV</string>
    <string name="local_storage">Local Storage</string>
    <string name="share">Share to another app</string>
    <string name="save">Save to file system</string>
    <string name="go">GO!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_card">Please select a storage device:</string>
    <string name="main_storage">Main Storage</string>
    <string name="sdcard">SD Card</string>
    <string name="converting">Converting \'%1$s\'</string>
    <string name="convert_success">Successfully converted \'%1$s\'!</string>
    <string name="convert_failed">Failed converting \'%1$s\':\n\n %2$s</string>
    <string name="failure_unknown">Conversion failed for unknown reason</string>
    <string name="ok">OK</string>
    <string name="send_to">Send</string>
    <string name="delete_confirm">Really delete %1$s?</string>
    <string name="cancel">Cancel</string>
    <string name="banner_id_test">ca-app-pub-3940256099942544/6300978111</string>
    <string name="inter_id_test">ca-app-pub-3940256099942544/1033173712</string>
    <string name="banner_id_release">ca-app-pub-2643541606004324/1179974018</string>
    <string name="inter_id_release">ca-app-pub-2643541606004324/8483748967</string>
    <string name="report_problem">Report a problem</string>
    <string name="report_problem_text">Having trouble finding a file, or converting it?
    A polite email describing the problem is more likely to fix the issue than a one-word negative Play Store review! Please explain:\n\n

        - At what point did the app go wrong (eg, finding the file, converting it, playing it back)\n\n
        - What happened? Was there an error message? Did the app just stop? It\'s useful to provide a screenshot if you can\n\n
        - If possible, attach the MIDI file you were trying to convert
    </string>
    <string name="problem_email">philip.blandford@gmail.com</string>
    <string name="problem_subject">Issue with Mp3Converter app</string>
    <string name="rate_app">Rate This App</string>
    <string name="bitrate">Bit Rate: %1$d</string>
    <string name="bitdepth">Bit Depth: %1$d</string>
    <string name="samplerate">Sample Rate: %1$dKh</string>
    <string name="cd">CD (44.1kh)</string>

</resources>